ELS Code/main/default/objects/Membership__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date clients activated their membership</description>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>