ELS Code/main/default/objects/Membership__c/fields/Active_Reservation_Nights_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Reservation_Nights_Count__c</fullName>
    <label>Active Reservation Nights #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>