ELS Code/main/default/objects/Membership__c/fields/Annual_Dues__c.field-meta.xml
<CustomField>
    <fullName>Annual_Dues__c</fullName>
    <label>Annual Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>