ELS Code/main/default/objects/Membership__c/fields/Assigment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assigment_Type__c</fullName>
    <label>Assigment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>