ELS Code/main/default/objects/Membership__c/fields/Cancel_Date_36_months_ago__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date_36_months_ago__c</fullName>
    <formula>IF (AND (Today () - Date_Cancelled__c &lt;= 1095, Today() &gt;= Date_Cancelled__c), &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Date 36 months ago</label>
    <type>Text</type>
</CustomField>