ELS Code/main/default/objects/Membership__c/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClientID</label>
    <referenceTo>ClientID__c</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>