ELS Code/main/default/objects/Membership__c/fields/Co_Applicant_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Address_1__c</fullName>
    <label>Co-Applicant Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>