ELS Code/main/default/objects/Membership__c/fields/Co_Applicant_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Cell_Phone__c</fullName>
    <label>Co-Applicant Cell Phone</label>
    <type>Phone</type>
</CustomField>