ELS Code/main/default/objects/Membership__c/fields/Co_Applicant_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Contact_Id__c</fullName>
    <label>Co-Applicant Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>