ELS Code/main/default/objects/Membership__c/fields/Co_Applicant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Last_Name__c</fullName>
    <label>Co-Applicant Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>