ELS Code/main/default/objects/Membership__c/fields/Co_Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Phone__c</fullName>
    <label>Co-Applicant Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>