ELS Code/main/default/objects/Membership__c/fields/Co_Applicant_State__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_State__c</fullName>
    <label>Co-Applicant State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>