ELS Code/main/default/objects/Membership__c/fields/CoApplicant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CoApplicant_Email_Address__c</fullName>
    <label>Co-Applicant Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>