ELS Code/main/default/objects/Membership__c/fields/Contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18__c</fullName>
    <formula>CASESAFEID(Contact__r.Id)</formula>
    <label>Contact ID (18)</label>
    <type>Text</type>
</CustomField>