ELS Code/main/default/objects/Membership__c/fields/Current_Dues_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Dues_Rate__c</fullName>
    <label>Current Dues Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>