ELS Code/main/default/objects/Membership__c/fields/Current_ZCP_Member__c.field-meta.xml
<CustomField>
    <fullName>Current_ZCP_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current ZCP Member?</label>
    <type>Checkbox</type>
</CustomField>