ELS Code/main/default/objects/Membership__c/fields/Date_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Date_Purchased__c</fullName>
    <label>Purchase Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>