ELS Code/main/default/objects/Membership__c/fields/Dealer_Program_activation_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Program_activation_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Program activation? (Yes/No)</label>
    <type>Checkbox</type>
</CustomField>