ELS Code/main/default/objects/Membership__c/fields/Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Delinquent__c</fullName>
    <formula>IF( Days_Delinquent__c &gt;0,  
IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000000LOVN&quot;,&quot;Green&quot;,50,50), IMAGE(&quot;/servlet/servlet.FileDownload?file=015j0000000LOVI&quot;,&quot;Red&quot;,50,50))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delinquent</label>
    <type>Text</type>
</CustomField>