ELS Code/main/default/objects/Membership__c/fields/DG_Delete_Membership__c.field-meta.xml
<CustomField>
    <fullName>DG_Delete_Membership__c</fullName>
    <formula>IF(  AND(OR(((YEAR( TODAY() ) *12 + MONTH( TODAY() )) - (YEAR( Date_Cancelled__c ) *12 + MONTH( Date_Cancelled__c))) &gt; 36,((YEAR( TODAY() ) *12 + MONTH( TODAY() )) - (YEAR( Renewal_Date__c ) *12 + MONTH( Renewal_Date__c))) &gt; 36 ),  NOT(Active__c ) ) 
 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Delete_Membership</label>
    <type>Checkbox</type>
</CustomField>