ELS Code/main/default/objects/Membership__c/fields/Dues_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dues_Rate__c</fullName>
    <label>Dues Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>