ELS Code/main/default/objects/Membership__c/fields/DUESCYCLE__c.field-meta.xml
<CustomField>
    <fullName>DUESCYCLE__c</fullName>
    <label>DUESCYCLE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>