ELS Code/main/default/objects/Membership__c/fields/Final_Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Final_Promotion_Code__c</fullName>
    <label>Final Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>