ELS Code/main/default/objects/Membership__c/fields/First_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Due_Date__c</fullName>
    <label>First Due Date</label>
    <type>Date</type>
</CustomField>