ELS Code/main/default/objects/Membership__c/fields/Free_Membership_Trial_activation_Yes_N__c.field-meta.xml
<CustomField>
    <fullName>Free_Membership_Trial_activation_Yes_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Membership Trial activation? (Y/N)</label>
    <type>Checkbox</type>
</CustomField>