ELS Code/main/default/objects/Membership__c/fields/Has_Trails_Collection_Plus__c.field-meta.xml
<CustomField>
    <fullName>Has_Trails_Collection_Plus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Trails Collection Plus</label>
    <type>Checkbox</type>
</CustomField>