ELS Code/main/default/objects/Membership__c/fields/IES_Created_By__c.field-meta.xml
<CustomField>
    <fullName>IES_Created_By__c</fullName>
    <label>IES Created By</label>
    <type>TextArea</type>
</CustomField>