ELS Code/main/default/objects/Membership__c/fields/IES_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>IES_Modified_By__c</fullName>
    <label>IES Modified By</label>
    <type>TextArea</type>
</CustomField>