ELS Code/main/default/objects/Membership__c/fields/Is_Zone_Pass_Membership__c.field-meta.xml
<CustomField>
    <fullName>Is_Zone_Pass_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Zone Pass Membership</label>
    <type>Checkbox</type>
</CustomField>