ELS Code/main/default/objects/Membership__c/fields/Last_Modified_Date_Digi__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Digi__c</fullName>
    <label>Last Modified Date (Digi)</label>
    <type>DateTime</type>
</CustomField>