ELS Code/main/default/objects/Membership__c/fields/Last_Modified_in_IES__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_in_IES__c</fullName>
    <label>Last Modified in IES</label>
    <type>Date</type>
</CustomField>