ELS Code/main/default/objects/Membership__c/fields/Loan_Days_Delinquent__c.field-meta.xml
<CustomField>
    <fullName>Loan_Days_Delinquent__c</fullName>
    <label>Loan Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>