ELS Code/main/default/objects/Membership__c/fields/Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Location_Description__c</fullName>
    <label>Location Description</label>
    <type>TextArea</type>
</CustomField>