ELS Code/main/default/objects/Membership__c/fields/Membership_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Code__c</fullName>
    <label>Membership Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>