ELS Code/main/default/objects/Membership__c/fields/Membership_Description__c.field-meta.xml
<CustomField>
    <fullName>Membership_Description__c</fullName>
    <label>Membership Description</label>
    <type>TextArea</type>
</CustomField>