ELS Code/main/default/objects/Membership__c/fields/MW_Zone__c.field-meta.xml
<CustomField>
    <fullName>MW_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MW Zone?</label>
    <type>Checkbox</type>
</CustomField>