ELS Code/main/default/objects/Membership__c/fields/NPD_Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>NPD_Next_Payment_Date__c</fullName>
    <label>NPD (Next Payment Date)</label>
    <type>Date</type>
</CustomField>