ELS Code/main/default/objects/Membership__c/fields/Original_Dues__c.field-meta.xml
<CustomField>
    <fullName>Original_Dues__c</fullName>
    <label>Original Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>