ELS Code/main/default/objects/Membership__c/fields/Original_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Member_ID__c</fullName>
    <label>Original Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>