ELS Code/main/default/objects/Membership__c/fields/Original_Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_Promotion_Code__c</fullName>
    <label>Original Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>