ELS Code/main/default/objects/Membership__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <label>Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>