ELS Code/main/default/objects/Membership__c/fields/Payment_Year__c.field-meta.xml
<CustomField>
    <fullName>Payment_Year__c</fullName>
    <label>Payment Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>