ELS Code/main/default/objects/Membership__c/fields/Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status__c</fullName>
    <label>Pending Status</label>
    <type>TextArea</type>
</CustomField>