ELS Code/main/default/objects/Membership__c/fields/Pending_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status_ID__c</fullName>
    <label>Pending Status ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>