ELS Code/main/default/objects/Membership__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <label>Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>