ELS Code/main/default/objects/Membership__c/fields/Property_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Dealer_Code__c</fullName>
    <label>Property Dealer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>