ELS Code/main/default/objects/Membership__c/fields/Prorated_Dues_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Dues_Amount__c</fullName>
    <label>Prorated Dues Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>