ELS Code/main/default/objects/Membership__c/fields/Purchase_Date_48_Months_Ago__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date_48_Months_Ago__c</fullName>
    <formula>IF (AND (Today () -  Date_Purchased__c  &lt;= 1460, Today() &gt;=  Date_Purchased__c ), &quot;YES&quot;, &quot;NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date &gt; 48 Months Ago</label>
    <type>Text</type>
</CustomField>