ELS Code/main/default/objects/Membership__c/fields/Renewal_Date_360_Days_Away__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_360_Days_Away__c</fullName>
    <formula>IF( Renewal_Date__c &gt;(TODAY()+360), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date &gt; 360 Days Away</label>
    <type>Text</type>
</CustomField>