ELS Code/main/default/objects/Membership__c/fields/Renewal_Date_60_Days__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_60_Days__c</fullName>
    <formula>IF (Renewal_Date__c &lt;( TODAY() +60), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date &lt; 60 Days</label>
    <type>Text</type>
</CustomField>