ELS Code/main/default/objects/Membership__c/fields/RV_Owner__c.field-meta.xml
<CustomField>
    <fullName>RV_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RV Owner?</label>
    <type>Checkbox</type>
</CustomField>