ELS Code/main/default/objects/Membership__c/fields/SAC_90_Day__c.field-meta.xml
<CustomField>
    <fullName>SAC_90_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAC 90 Day</label>
    <type>Checkbox</type>
</CustomField>