ELS Code/main/default/objects/Membership__c/fields/Set_up_for_Auto_pay_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Set_up_for_Auto_pay_Yes_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set up for Auto pay? (Yes/No)</label>
    <type>Checkbox</type>
</CustomField>