ELS Code/main/default/objects/Membership__c/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>