ELS Code/main/default/objects/Membership__c/fields/Test_Memb_Amount__c.field-meta.xml
<CustomField>
    <fullName>Test_Memb_Amount__c</fullName>
    <label>Test Memb Amount</label>
    <summarizedField>Membership_Revenue__c.DUESPMTS__c</summarizedField>
    <summaryForeignKey>Membership_Revenue__c.Membership_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>