ELS Code/main/default/objects/Membership__c/fields/Total_Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Auto_Pay__c</fullName>
    <label>Total Auto Pay</label>
    <summaryFilterItems>
        <field>Membership_Revenue__c.Dues_Auto_Pay_c__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Membership_Revenue__c.Membership_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>