ELS Code/main/default/objects/Membership__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <description>Roll up summary field which sum all revenue of a membership.</description>
    <label>Total Revenue</label>
    <summarizedField>Membership_Revenue__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Membership_Revenue__c.Membership_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>