ELS Code/main/default/objects/Membership__c/fields/Trailbalzer_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Trailbalzer_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailbalzer Subscription</label>
    <type>Checkbox</type>
</CustomField>