ELS Code/main/default/objects/Membership__c/fields/Trails_Collection_Plus_Add_Date__c.field-meta.xml
<CustomField>
    <fullName>Trails_Collection_Plus_Add_Date__c</fullName>
    <label>Trails Collection Plus Add Date</label>
    <type>Date</type>
</CustomField>