ELS Code/main/default/objects/Membership__c/fields/TX_Zone__c.field-meta.xml
<CustomField>
    <fullName>TX_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TX Zone?</label>
    <type>Checkbox</type>
</CustomField>