ELS Code/main/default/objects/Membership__c/fields/Unapplied_Cash__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_Cash__c</fullName>
    <label>Unapplied Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>