ELS Code/main/default/objects/Membership__c/fields/Zone_Member__c.field-meta.xml
<CustomField>
    <fullName>Zone_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zone Member</label>
    <type>Checkbox</type>
</CustomField>