ELS Code/main/default/objects/Membership__c/listViews/Renewing_in_30_days.listView-meta.xml
<ListView>
    <fullName>Renewing_in_30_days</fullName>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Client_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Date_Purchased__c</columns>
    <columns>Date_Cancelled__c</columns>
    <columns>Active__c</columns>
    <columns>Promotion_Code__c</columns>
    <columns>Source_ID__c</columns>
    <columns>Co_Applicant_First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Renewal_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <label>Renewing in 30 days</label>
</ListView>