ELS Code/main/default/objects/Membership__c/listViews/Zone_NE.listView-meta.xml
<ListView>
    <fullName>Zone_NE</fullName>
    <columns>NAME</columns>
    <columns>Member_ID__c</columns>
    <columns>Client_ID__c</columns>
    <columns>Contact__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Date_Purchased__c</columns>
    <columns>Date_Cancelled__c</columns>
    <columns>Active__c</columns>
    <columns>Promotion_Code__c</columns>
    <columns>Source_ID__c</columns>
    <columns>Co_Applicant_First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NE_Zone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Zone - NE</label>
</ListView>